--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,8 +3,13 @@
     "browser": true,
     "es2021": true
   },
-  "extends": ["airbnb-base", "plugin:prettier/recommended"],
-  "parser": "@babel/eslint-parser",
+  "extends": [
+    "airbnb-base",
+    "plugin:prettier/recommended",
+    "@typescript-eslint/recommended",
+    "prettier/@typescript-eslint"
+  ],
+  "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
